test/fixtures/expressions/invalid_contents/unterminated_quote.mf2
{1 a |}
=== spans ===
                    {1 a |}
Pattern             ^^^^^^^ 0:0-0:7
LiteralExpression   ^^^^^^^ 0:0-0:7
Number               ^      0:1-0:2
Number.integral      ^      0:1-0:2
=== diagnostics ===
Quoted string is missing the closing quote. (at @5..7)
  {1 a |}
       ^^
Placeholder is missing the closing brace. (at @0..7)
  {1 a |}
  ^^^^^^^
Placeholder expression contains invalid content. (at @3..7)
  {1 a |}
     ^^^^
=== formatted ===
(cannot format due to fatal errors)
=== ast ===
Pattern {
    parts: [
        LiteralExpression {
            span: @0..7,
            literal: Number {
                start: @1,
                raw: "1",
                is_negative: false,
                integral_len: 1,
                fractional_len: None,
                exponent_len: None,
            },
            annotation: None,
            attributes: [],
        },
    ],
}